k8s/corndog-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corndog-admin
  namespace: corndog
  labels:
    app: corndog
    component: corndog-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: corndog
      component: corndog-admin
  template:
    metadata:
      labels:
        app: corndog
        component: corndog-admin
    spec:
      containers:
        - name: corndog-admin
          image: corndog/corndog-admin:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
