k8s/corndog-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corndog-db
  namespace: corndog
  labels:
    app: corndog
    component: corndog-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: corndog
      component: corndog-db
  template:
    metadata:
      labels:
        app: corndog
        component: corndog-db
    spec:
      containers:
        - name: corndog-db
          image: postgres:14
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          emptyDir: {}
