k8s/corndog-loyalty-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corndog-loyalty
  namespace: corndog
  labels:
    app: corndog
    component: corndog-loyalty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: corndog
      component: corndog-loyalty
  template:
    metadata:
      labels:
        app: corndog
        component: corndog-loyalty
    spec:
      containers:
        - name: corndog-loyalty
          image: corndog/corndog-loyalty:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
