k8s/corndog-menu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corndog-menu
  namespace: corndog
  labels:
    app: corndog
    component: corndog-menu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: corndog
      component: corndog-menu
  template:
    metadata:
      labels:
        app: corndog
        component: corndog-menu
    spec:
      containers:
        - name: corndog-menu
          image: corndog/corndog-menu:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
