k8s/corndog-orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corndog-orders
  namespace: corndog
  labels:
    app: corndog
    component: corndog-orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: corndog
      component: corndog-orders
  template:
    metadata:
      labels:
        app: corndog
        component: corndog-orders
      annotations:
        ad.datadoghq.com/corndog-orders.logs: '[{"source":"python","service":"corndog-orders"}]'
    spec:
      containers:
        - name: corndog-orders
          image: corndog/corndog-orders:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
