k8s/corndog-suggestions-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corndog-suggestions
  namespace: corndog
  labels:
    app: corndog
    component: corndog-suggestions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: corndog
      component: corndog-suggestions
  template:
    metadata:
      labels:
        app: corndog
        component: corndog-suggestions
      annotations:
        ad.datadoghq.com/corndog-suggestions.logs: '[{"source":"python","service":"corndog-suggestions"}]'
    spec:
      containers:
        - name: corndog-suggestions
          image: corndog/corndog-suggestions:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5002
