k8s/corndog-traffic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corndog-traffic
  namespace: corndog
  labels:
    app: corndog
    component: corndog-traffic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: corndog
      component: corndog-traffic
  template:
    metadata:
      labels:
        app: corndog
        component: corndog-traffic
      annotations:
        admission.datadoghq.com/enabled: "false"
        ad.datadoghq.com/corndog-traffic.logs: '[{"source":"traffic","log_processing_rules":[{"type":"exclude_at_match","name":"exclude_all","pattern":".*"}]}]'
    spec:
      containers:
        - name: corndog-traffic
          image: locustio/locust
          command:
            - locust
          args:
            - "-f"
            - /locust/locustfile.py
            - "--host"
            - "$(TRAFFIC_TARGET)"
            - "--headless"
            - "--users"
            - "$(TRAFFIC_RATE)"
            - "--spawn-rate"
            - "$(TRAFFIC_RATE)"
          volumeMounts:
            - name: locustfile
              mountPath: /locust
              readOnly: true
      volumes:
        - name: locustfile
          configMap:
            name: corndog-traffic-locustfile
