k8s/corndog-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: corndog-admin
  namespace: corndog
  labels:
    app: corndog
    component: corndog-admin
spec:
  type: ClusterIP
  selector:
    app: corndog
    component: corndog-admin
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
