k8s/corndog-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: corndog-auth
  namespace: corndog
  labels:
    app: corndog
    component: corndog-auth
spec:
  type: ClusterIP
  selector:
    app: corndog
    component: corndog-auth
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
