k8s/corndog-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: corndog-db
  namespace: corndog
  labels:
    app: corndog
    component: corndog-db
spec:
  type: ClusterIP
  selector:
    app: corndog
    component: corndog-db
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
