k8s/corndog-menu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: corndog-menu
  namespace: corndog
  labels:
    app: corndog
    component: corndog-menu
spec:
  type: ClusterIP
  selector:
    app: corndog
    component: corndog-menu
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
