k8s/corndog-orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: corndog-orders
  namespace: corndog
  labels:
    app: corndog
    component: corndog-orders
spec:
  type: ClusterIP
  selector:
    app: corndog
    component: corndog-orders
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
