k8s/corndog-suggestions-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: corndog-suggestions
  namespace: corndog
  labels:
    app: corndog
    component: corndog-suggestions
spec:
  type: ClusterIP
  selector:
    app: corndog
    component: corndog-suggestions
  ports:
    - port: 5002
      targetPort: 5002
      protocol: TCP
