k8s/corndog-web-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: corndog-web-ui
  namespace: corndog
  labels:
    app: corndog
    component: corndog-web-ui
spec:
  type: ClusterIP
  selector:
    app: corndog
    component: corndog-web-ui
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
